style: ajuste no css do projeto.

--- a/style.css
+++ b/style.css
@@ -213,3 +213,14 @@ button:disabled {
 .hidden {
   display: none;
 }
+
+.thanks {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+}
+
+.thanks i {
+  font-size: 2rem;
+}
